force-app/main/default/objects/Commission_Plan__c/Commission_Plan__c.object-meta.xml
<CustomObject>
    <description>Master commission plan with effective dating for tiered commission calculations</description>
    <label>Commission Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>