force-app/main/default/objects/Commission_Plan__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>End date for plan validity</description>
    <label>Effective End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>