force-app/main/default/objects/Commission_Plan__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Start date for plan validity</description>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>